@@ -33,8 +33,11 @@ string and have \code{"px"} appended.}
 \item{inline}{use an inline (\code{span()}) or block container (\code{div()})
 for the output}
 
-\item{reportSize}{Should the widget's container styles (e.g., background
-/foreground color) be reported in the shiny session's client data?}
+\item{reportSize}{Should the widget's container size be reported in the
+shiny session's client data?}
+
+\item{reportTheme}{Should the widget's container styles (e.g., colors and fonts)
+be reported in the shiny session's client data?}
 
 \item{expr}{An expression that generates an HTML widget (or a
 \href{https://rstudio.github.io/promises/}{promise} of an HTML widget).}
